--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1042,7 +1042,7 @@
                                                         <!--</td>-->
 
                                                         <td>
-                                                            <textarea style="font-size: small" fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
+                                                            <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="GP merit" class="form-control" name="description" [(ngModel)]="item.description"></textarea>
                                                             <!--<input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>-->
                                                             <!--<div [hidden]="description.valid || description.pristine" class="alert alert-danger">-->
                                                             <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
@@ -1074,7 +1074,7 @@
                                                         <!--</td>-->
 
                                                         <td>
-                                                            <textarea style="font-size: small" fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
+                                                            <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="GP risk" class="form-control" name="description" [(ngModel)]="item.description"></textarea>
                                                             <!--<input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>-->
                                                             <!--<div [hidden]="description.valid || description.pristine" class="alert alert-danger">-->
                                                             <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
@@ -1113,7 +1113,7 @@
                                                         <!--</td>-->
 
                                                         <td>
-                                                            <textarea style="font-size: small" fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
+                                                            <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Strategy/Structure merit" class="form-control" name="description" [(ngModel)]="item.description"></textarea>
                                                             <!--<input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>-->
                                                             <!--<div [hidden]="description.valid || description.pristine" class="alert alert-danger">-->
                                                             <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
@@ -1145,7 +1145,7 @@
                                                         <!--</td>-->
 
                                                         <td>
-                                                            <textarea style="font-size: small" fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
+                                                            <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Strategy/Structure risk" class="form-control" name="description" [(ngModel)]="item.description"></textarea>
                                                             <!--<input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>-->
                                                             <!--<div [hidden]="description.valid || description.pristine" class="alert alert-danger">-->
                                                             <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
@@ -1184,7 +1184,7 @@
                                                         <!--</td>-->
 
                                                         <td>
-                                                            <textarea style="font-size: small" fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
+                                                            <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Performance merit" class="form-control" name="description" [(ngModel)]="item.description"></textarea>
                                                             <!--<input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>-->
                                                             <!--<div [hidden]="description.valid || description.pristine" class="alert alert-danger">-->
                                                             <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
@@ -1216,7 +1216,7 @@
                                                         <!--</td>-->
 
                                                         <td>
-                                                            <textarea style="font-size: small" fz-elastic spellcheck="false"  class="form-control" name="description" [(ngModel)]="item.description"></textarea>
+                                                            <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Performance risk" class="form-control" name="description" [(ngModel)]="item.description"></textarea>
                                                             <!--<input type="text" class="form-control" name="description" [(ngModel)]="item.description" placeholder="-" #description="ngModel"/>-->
                                                             <!--<div [hidden]="description.valid || description.pristine" class="alert alert-danger">-->
                                                             <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
