--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1449,54 +1449,91 @@
                                                 <!--</tr>-->
                                             <!--</div>-->
                                             <div *ngFor="let item of fund.managementTeam">
-                                                <tr>
-                                                    <td>
-                                                        <input style="font-size: small" type="text" class="form-control" name="name" [(ngModel)]="item.name" placeholder="Name" #name="ngModel"/>
-                                                        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-                                                            Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <input style="font-size: small" type="text" class="form-control" name="position" [(ngModel)]="item.position" placeholder="Position" #position="ngModel"/>
-                                                        <div [hidden]="position.valid || position.pristine" class="alert alert-danger">
-                                                            Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <input style="font-size: small" type="text" class="form-control" name="age" [(ngModel)]="item.age" placeholder="Age" pattern="[-]?[0-9]*\.?[0-9]+" #age="ngModel"/>
-                                                        <div [hidden]="age.valid || age.pristine" class="alert alert-danger">
-                                                            Only number could be entered
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowManagementTeam(item)">
-                                                            <span class="glyphicon glyphicon-minus"></span>
-                                                        </button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Experience" class="form-control" name="experience" [(ngModel)]="item.experience"></textarea>
-                                                        <!--<input type="text" class="form-control" name="experience" [(ngModel)]="item.experience" placeholder="-" #experience="ngModel"/>-->
-                                                        <!--<div [hidden]="experience.valid || experience.pristine" class="alert alert-danger">-->
-                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
-                                                        <!--</div>-->
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Education" class="form-control" name="education" [(ngModel)]="item.education"></textarea>
-                                                        <!--<input type="text" class="form-control" name="education" [(ngModel)]="item.education" placeholder="-" #education="ngModel"/>-->
-                                                        <!--<div [hidden]="education.valid || education.pristine" class="alert alert-danger">-->
-                                                        <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
-                                                        <!--</div>-->
-                                                    </td>
-                                                </tr>
+                                                <div style="text-align: right">
+                                                    <button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowManagementTeam(item)">
+                                                        <span class="glyphicon glyphicon-minus"></span>
+                                                    </button>
+                                                </div>
+                                                <div>
+                                                    <input style="font-size: small" type="text" class="form-control" name="name" [(ngModel)]="item.name" placeholder="Name" #name="ngModel"/>
+                                                    <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <input style="font-size: small" type="text" class="form-control" name="position" [(ngModel)]="item.position" placeholder="Position" #position="ngModel"/>
+                                                    <div [hidden]="position.valid || position.pristine" class="alert alert-danger">
+                                                        Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <input style="font-size: small" type="text" class="form-control" name="age" [(ngModel)]="item.age" placeholder="Age" pattern="[-]?[0-9]*\.?[0-9]+" #age="ngModel"/>
+                                                    <div [hidden]="age.valid || age.pristine" class="alert alert-danger">
+                                                        Only number could be entered
+                                                    </div>
+                                                </div>
+                                                <div>
+                                                    <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Experience" class="form-control" name="experience" [(ngModel)]="item.experience"></textarea>
+                                                    <!--<input type="text" class="form-control" name="experience" [(ngModel)]="item.experience" placeholder="-" #experience="ngModel"/>-->
+                                                    <!--<div [hidden]="experience.valid || experience.pristine" class="alert alert-danger">-->
+                                                    <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
+                                                    <!--</div>-->
+                                                </div>
+                                                <div>
+                                                    <textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Education" class="form-control" name="education" [(ngModel)]="item.education"></textarea>
+                                                    <!--<input type="text" class="form-control" name="education" [(ngModel)]="item.education" placeholder="-" #education="ngModel"/>-->
+                                                    <!--<div [hidden]="education.valid || education.pristine" class="alert alert-danger">-->
+                                                    <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
+                                                    <!--</div>-->
+                                                </div>
                                                 <br>
+                                                <!--<tr>-->
+                                                    <!--<td>-->
+                                                        <!--<input style="font-size: small" type="text" class="form-control" name="name" [(ngModel)]="item.name" placeholder="Name" #name="ngModel"/>-->
+                                                        <!--<div [hidden]="name.valid || name.pristine" class="alert alert-danger">-->
+                                                            <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
+                                                        <!--</div>-->
+                                                    <!--</td>-->
+                                                <!--</tr>-->
+                                                <!--<tr>-->
+                                                    <!--<td>-->
+                                                        <!--<input style="font-size: small" type="text" class="form-control" name="position" [(ngModel)]="item.position" placeholder="Position" #position="ngModel"/>-->
+                                                        <!--<div [hidden]="position.valid || position.pristine" class="alert alert-danger">-->
+                                                            <!--Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'-->
+                                                        <!--</div>-->
+                                                    <!--</td>-->
+                                                <!--</tr>-->
+                                                <!--<tr>-->
+                                                    <!--<td>-->
+                                                        <!--<input style="font-size: small" type="text" class="form-control" name="age" [(ngModel)]="item.age" placeholder="Age" pattern="[-]?[0-9]*\.?[0-9]+" #age="ngModel"/>-->
+                                                        <!--<div [hidden]="age.valid || age.pristine" class="alert alert-danger">-->
+                                                            <!--Only number could be entered-->
+                                                        <!--</div>-->
+                                                    <!--</td>-->
+                                                    <!--<td>-->
+                                                        <!--<button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowManagementTeam(item)">-->
+                                                            <!--<span class="glyphicon glyphicon-minus"></span>-->
+                                                        <!--</button>-->
+                                                    <!--</td>-->
+                                                <!--</tr>-->
+                                                <!--<tr>-->
+                                                    <!--<td>-->
+                                                        <!--<textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Experience" class="form-control" name="experience" [(ngModel)]="item.experience"></textarea>-->
+                                                        <!--&lt;!&ndash;<input type="text" class="form-control" name="experience" [(ngModel)]="item.experience" placeholder="-" #experience="ngModel"/>&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;<div [hidden]="experience.valid || experience.pristine" class="alert alert-danger">&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                    <!--</td>-->
+                                                <!--</tr>-->
+                                                <!--<tr>-->
+                                                    <!--<td>-->
+                                                        <!--<textarea style="font-size: small" fz-elastic spellcheck="false" placeholder="Education" class="form-control" name="education" [(ngModel)]="item.education"></textarea>-->
+                                                        <!--&lt;!&ndash;<input type="text" class="form-control" name="education" [(ngModel)]="item.education" placeholder="-" #education="ngModel"/>&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;<div [hidden]="education.valid || education.pristine" class="alert alert-danger">&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;Name must contain 1-50 characters A-Z, a-z, 0-9, space, period, hyphen, '(', ')'&ndash;&gt;-->
+                                                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                                                    <!--</td>-->
+                                                <!--</tr>-->
                                                 <!--<tr>-->
                                                     <!--<td>-->
                                                         <!--<button type="button" class="btn-xs btn-danger" style="display: inline-block"  (click)="removeRowManagementTeam(item)">-->
