--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1016,6 +1016,11 @@
                                     <div class="col-md-9">
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
+                                                <th width="50%" bgcolor="#00cc00">IRR & TVPI multiple</th>
+                                            </tr>
+                                        </table>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
                                                 <th width="50%" bgcolor="#00cc00">Observations</th>
                                                 <th width="50%" bgcolor="#00cc00"></th>
                                             </tr>
