--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1021,6 +1021,12 @@
                                         </table>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
+                                                <td width="50%" style="text-align: center">Net IRR chart</td>
+                                                <td width="50%" style="text-align: center">Net MOIC chart</td>
+                                            </tr>
+                                        </table>
+                                        <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
+                                            <tr>
                                                 <th width="50%" bgcolor="#00cc00">Observations</th>
                                                 <th width="50%" bgcolor="#00cc00"></th>
                                             </tr>
