--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -1021,8 +1021,12 @@
                                         </table>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
                                             <tr>
-                                                <td width="50%" style="text-align: center">Net IRR chart</td>
-                                                <td width="50%" style="text-align: center">Net MOIC chart</td>
+                                                <td width="50%" style="text-align: center">
+                                                    <img [src]="url_NET_IRR" style="max-width: 410px; max-height: 410px">
+                                                </td>
+                                                <td width="50%" style="text-align: center">
+                                                    <img [src]="url_NET_MOIC" style="max-width: 410px; max-height: 410px">
+                                                </td>
                                             </tr>
                                         </table>
                                         <table class="table table-hover table-responsive table-condensed" style="font-size: smaller">
