--- a/nicnbk-ui-angular2/src/app/reporting/view/reserve.calculation.form.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/reserve.calculation.form.nb.reporting.component.html
@@ -132,7 +132,7 @@
                 <td>{{record.amountKZT | number:'1.2-2'}}</td>
                 <td>
                     <button [disabled]="!showExportOrderButton(record)" class="btn btn-xs btn-primary" style="margin-left: 10px;" type="button" (click)="exportOrder(record)">
-                        Order
+                        Letter
                     </button>
 
                     <button [disabled]="record.expenseType.code != 'ADD'" class="btn btn-xs btn-success" style="margin-left: 10px;" type="button" (click)="exportFAFToOperations(record)">
