--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-liquid-portfolio.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-liquid-portfolio.component.html
@@ -15,61 +15,65 @@
         <!--</div>-->
     <!--</div>-->
 
-    <div class="row">
-        <div class="col-md-2">
-            <select (ngModelChange)="redraw()" [(ngModel)]="tableDate" id="tableDate" class="form-control">
-                <option *ngFor="let item of getAllDates()" [value]="item">{{item}}</option>
-            </select>
-        </div>
+    <div class="row withpadding">
+        <h2>Under Construction. New monitoring forms to be updated soon.</h2>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <h4>NET Asset Value, $</h4>
-                <div id="net_value">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <h4>Performance, %</h4>
-                <div id="performance">
-                </div>
-            </div>
-        </div>
-    </div>
-    <br/>
-    <div class="row">
-        <div class="col-md-12">
-            <div id="cum_returns_ytd">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div id="cum_returns_inception">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-4">
-                <div id="portfolio_structure">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div id="bonds_by_country">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div id="bonds_by_sector">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div id="position_table">
-            </div>
-        </div>
-    </div>
-    <br/>
+
+    <!--<div class="row">-->
+        <!--<div class="col-md-2">-->
+            <!--<select (ngModelChange)="redraw()" [(ngModel)]="tableDate" id="tableDate" class="form-control">-->
+                <!--<option *ngFor="let item of getAllDates()" [value]="item">{{item}}</option>-->
+            <!--</select>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div class="col-md-6">-->
+                <!--<h4>NET Asset Value, $</h4>-->
+                <!--<div id="net_value">-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-md-6">-->
+                <!--<h4>Performance, %</h4>-->
+                <!--<div id="performance">-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<br/>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div id="cum_returns_ytd">-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div id="cum_returns_inception">-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div class="col-md-4">-->
+                <!--<div id="portfolio_structure">-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-md-4">-->
+                <!--<div id="bonds_by_country">-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-md-4">-->
+                <!--<div id="bonds_by_sector">-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-12">-->
+            <!--<div id="position_table">-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<br/>-->
 </div>
