--- a/nicnbk-ui-angular2/src/app/reporting/view/singularity.general.ledger.balance.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/singularity.general.ledger.balance.nb.reporting.component.html
@@ -27,21 +27,28 @@
         <h3 *ngIf="report != null">{{getReportDateShortFormatted(report.reportDate)}} - Singularity General Ledger Balance</h3>
     </div>
     <div class="row withpadding">
+        <div>
+            <button class="btn btn-sm btn-primary pull-right" (click)="toggleAdjustments()">Show/hide adjustments</button>
+            <br/>
+            <br/>
+        </div>
         <table [ngBusy]="busy" class="table table-hover table-condensed" style="font-size: small">
             <tr bgcolor="#e7e7e7">
-                <td>Acronym</td>
-                <td>Balance Date</td>
-                <td>Financial Statement Category</td>
-                <td>GL Account</td>
-                <td>Financial Statement Category Description</td>
-                <td>Chart of Accounts Long Description</td>
-                <td>Short name</td>
-                <td>GL Account Balance</td>
-                <td>Seg Val CCY</td>
-                <td>Fund CCY</td>
+                <td width="5%">Acronym</td>
+                <td width="5%">Balance Date</td>
+                <td width="5%">Financial Statement Category</td>
+                <td width="5%">GL Account</td>
+                <td width="10%">Financial Statement Category Description</td>
+                <td width="20%">Chart of Accounts Long Description</td>
+                <td width="10%">Short name</td>
+                <td width="10%">GL Account Balance</td>
+                <td width="5%">Seg Val CCY</td>
+                <td width="5%">Fund CCY</td>
+                <td width="10%" *ngIf="showAdjustmentsRedemption(null)">Adjusted redemption</td>
+                <td width="10%" *ngIf="showAdjustmentsInterestRate(null)">Interest rate</td>
             </tr>
             <tr *ngFor="let record of records.generalLedgerBalanceList">
-                <td>{{record.acronym}}</td>
+                <td >{{record.acronym}}</td>
                 <td>{{record.balanceDate}}</td>
                 <td>{{record.financialStatementCategory}}</td>
                 <td>{{record.glaccount}}</td>
@@ -51,6 +58,12 @@
                 <td>{{record.glaccountBalance != null ? (record.glaccountBalance | number:'1.2-2'): ''}}</td>
                 <td>{{record.segValCCY}}</td>
                 <td>{{record.fundCCY}}</td>
+                <td *ngIf="showAdjustmentsRedemption(null)">
+                    <input *ngIf="showAdjustmentsRedemption(record)" [readonly]="report.status === 'SUBMITTED'" type="number" step="0.01" class="form-control" [(ngModel)]="record.adjustedRedemption" [ngModelOptions]="{standalone: true}"/>
+                </td>
+                <td *ngIf="showAdjustmentsInterestRate(null)">
+                    <input *ngIf="showAdjustmentsInterestRate(record)" [readonly]="report.status === 'SUBMITTED'" type="text" class="form-control" [(ngModel)]="record.interestRate" [ngModelOptions]="{standalone: true}"/>
+                </td>
 
             </tr>
         </table>
@@ -58,6 +71,7 @@
 
     <div class="row">
         <div class="col-md-12">
+            <button *ngIf="showAdjustmentsRedemption(null) || showAdjustmentsInterestRate(null)" [disabled]="!showAdjustments || report.status === 'SUBMITTED'" class="btn btn-success pull-right" (click)="saveAdjustments()">Save</button>
         </div>
     </div>
 </div>
