Intermediate commit to switch branches

--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -144,7 +144,7 @@
 
                     </ul>
                 </li>
-                <!--<li [routerLinkActive]="['active']"><a [routerLink]="['/corpMeetings']" data-toggle="tooltip" title="Corp Meetings">Corp Meetings</a></li>-->
+                <li [routerLinkActive]="['active']"><a [routerLink]="['/corpMeetings']" data-toggle="tooltip" title="Corp Meetings">Corp Meetings</a></li>
             </ul>
         </div>
     </nav>
