--- a/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meetings-list.component.html
+++ b/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meetings-list.component.html
@@ -50,15 +50,22 @@
             <form (ngSubmit)="search()">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="col-md-6">
+                        <div class="col-md-3">
                             <div class="form-group">
                                 <label for="meetingType">Type</label>
-                                <select class="form-control" id="meetingType" name="meetingType">
+                                <select class="form-control" id="meetingType" name="meetingType" [(ngModel)]="searchParams.type">
                                     <option value="NONE">---</option>
                                     <option value="BOD">BoD</option>
                                     <option value="EXEC">Executive Board</option>
                                     <option value="IC">Investment Committee</option>
                                 </select>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <label for="searchText">&nbsp;</label>
+                            <div class="form-group">
+                                <input type="text" name="searchText" id="searchText" class="form-control"
+                                       placeholder="Search text...." [(ngModel)]="searchParams.searchText"/>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -122,28 +129,25 @@
             </form>
         </div>
         <div>
-            <label>Total found: <span>?????</span></label>
+            <label>Total found:  <span>{{searchResult?.totalElements > 0 ? searchResult?.totalElements : 0}}</span></label>
         </div>
         <div class="row withpadding" style="position: relative; min-height: 80px;">
-            <!--<div class="row pull-right">-->
-                <!--<ul class="pagination" *ngIf="tripMemoSearchResult?.showPageFrom > 0">-->
-                    <!--<li><a *ngIf="tripMemoSearchResult?.showPageFrom > 1" (click)="search(tripMemoSearchResult.showPageFrom - 1)">&laquo;</a></li>-->
-                    <!--<li *ngFor="let i of range(tripMemoSearchResult.showPageFrom, tripMemoSearchResult.showPageTo)" [class.active]="i == tripMemoSearchResult.currentPage">-->
-                        <!--<a (click)="search(i)">{{i}}</a>-->
-                    <!--</li>-->
-                    <!--<li><a *ngIf="tripMemoSearchResult.showPageTo < tripMemoSearchResult.totalPages" (click)="search(tripMemoSearchResult.showPageTo + 1)">&raquo;</a></li>-->
-                <!--</ul>-->
-            <!--</div>-->
+            <div class="row pull-right">
+                <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
+                    <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
+                    <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
+                        <a (click)="search(i)">{{i}}</a>
+                    </li>
+                    <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
+                </ul>
+            </div>
             <table [ngBusy]="busy"  class = "table table-hover">
             <thead>
             <tr>
-                <th>TYPE</th>
-                <th>NAME</th>
-                <th>ORGANIZATION</th>
-                <th>LOCATION</th>
-                <th>DATE FROM</th>
-                <th>DATE TO</th>
-                <th>AUTHOR</th>
+                <th width="10%">TYPE</th>
+                <th width="10%">DATE</th>
+                <th width="10%">NUMBER</th>
+                <th width="70%">NAME</th>
                 <!--<th>STATUS</th>-->
                 <!--<th>UPDATED</th>-->
                 <!--<th>UPDATEDBY</th>-->
@@ -152,13 +156,10 @@
 
             <tbody>
             <tr *ngFor="let meeting of corpMeetings"  style="cursor: pointer">
-                <td width="5%">TYPE</td>
-                <td width="30%"><a>NAME</a></td>
-                <td width="10%"><a>ORGANIZATION</a></td>
-                <td width="15%"><a>LOCATION</a></td>
-                <td width="10%">FROM</td>
-                <td width="10%">TO</td>
-                <td width="10%">AUTHOR</td>
+                <td width="10%">{{meeting.type}}</td>
+                <td width="10%">{{meeting.date}}</td>
+                <td width="10%" >{{meeting.number}}</td>
+                <td width="70%"><a [routerLink]="['/corpMeetings/edit/', meeting.id]">{{meeting.shortName}}</a></td>
                 <!--<td width="10%">{{tripMemo.status}}</td>-->
                 <!--<td width="10%">-->
                     <!--{{tripMemo.updateDate}}-->
@@ -170,15 +171,15 @@
             </tr>
             </tbody>
         </table>
-            <!--<div class="row pull-right">-->
-                <!--<ul class="pagination" *ngIf="tripMemoSearchResult?.showPageFrom > 0">-->
-                    <!--<li><a *ngIf="tripMemoSearchResult?.showPageFrom > 1" (click)="search(tripMemoSearchResult.showPageFrom - 1)">&laquo;</a></li>-->
-                    <!--<li *ngFor="let i of range(tripMemoSearchResult.showPageFrom, tripMemoSearchResult.showPageTo)" [class.active]="i == tripMemoSearchResult.currentPage">-->
-                        <!--<a (click)="search(i)">{{i}}</a>-->
-                    <!--</li>-->
-                    <!--<li><a *ngIf="tripMemoSearchResult.showPageTo < tripMemoSearchResult.totalPages" (click)="search(tripMemoSearchResult.showPageTo + 1)">&raquo;</a></li>-->
-                <!--</ul>-->
-            <!--</div>-->
+        <div class="row pull-right">
+            <ul class="pagination" *ngIf="searchResult?.showPageFrom > 0">
+                <li><a *ngIf="searchResult?.showPageFrom > 1" (click)="search(searchResult.showPageFrom - 1)">&laquo;</a></li>
+                <li *ngFor="let i of range(searchResult.showPageFrom, searchResult.showPageTo)" [class.active]="i == searchResult.currentPage">
+                    <a (click)="search(i)">{{i}}</a>
+                </li>
+                <li><a *ngIf="searchResult.showPageTo < searchResult.totalPages" (click)="search(searchResult.showPageTo + 1)">&raquo;</a></li>
+            </ul>
+        </div>
         </div>
     </div>
 </div>
